--- a/SEA_Application/Views/PhotoCopier_Dashboard/StudentsNotesSummary.cshtml
+++ b/SEA_Application/Views/PhotoCopier_Dashboard/StudentsNotesSummary.cshtml
@@ -53,7 +53,7 @@
                 <thead>
 
                     <tr>
-                        <th >Receipt No</th>
+                        <th >Approved No</th>
                         <th>Student</th>
                         <th>Class </th>
                         <th>Status </th>
@@ -257,7 +257,7 @@
                 var GrandTotalDiscountedOAPrice = 0;
                 $.each(data, function (index) {
                     debugger
-                    $("#SaleReport").append("<tr> <td >" + data[index].OrderId + "</td><td>" + data[index].StudentName + "</td> <td>" + data[index].ClassName + "</td><td>" + data[index].Status + "</td><td>" + data[index].TotalPhotoCopier + "</td><td>" + data[index].TotalOA + "</td><td>" + data[index].Total + "</td><td> -" + data[index].Discount + "</td><td>" + data[index].TotalDiscounted + "</td><td class='detailscolumn'><center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderId + "' ></center></td></tr>")
+                    $("#SaleReport").append("<tr> <td >" + data[index].ApprovedId + "</td><td>" + data[index].StudentName + "</td> <td>" + data[index].ClassName + "</td><td>" + data[index].Status + "</td><td>" + data[index].TotalPhotoCopier + "</td><td>" + data[index].TotalOA + "</td><td>" + data[index].Total + "</td><td> -" + data[index].Discount + "</td><td>" + data[index].TotalDiscounted + "</td><td class='detailscolumn'><center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderId + "' ></center></td></tr>")
 
                     //"<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' ></center>"
                     GrandTotalPhotoCopier = GrandTotalPhotoCopier + data[index].TotalPhotoCopier;
