--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -139,6 +139,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="@Url.Action("AdminsCashSummary", "FinanceSummary")" class="nav-link nav-toggle">
+                            <i class="fa fa-money"></i>
+                            <p id="">Cash Summary </p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="@Url.Action("StudentFee", "GrandTotal" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-teacher.png" alt="">
